syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.eventstore";
option java_outer_classname = "EventstoreProto";
option objc_class_prefix = "ES";

package zoover;


service Eventstore {
  rpc GetEvents (EventsRequest) returns (EventsReply) {}
  rpc SetEvent(SetEventRequest) returns (SetEventResponse) {}
}

message SetEventResponse {

}

message SetEventRequest {
  Event event = 1;
}

message EventsRequest {
  string streamId = 1;
}

message Event {
  string eventId = 1;
  string eventType = 2;
  int64 eventTimestamp = 3;
}

message EventsReply {
  repeated Event events = 1;
}
